<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:weightSum="8">

    <include layout="@layout/toolbar_layout" />

    <LinearLayout
        android:id="@+id/ll_enroll_fingerprint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:orientation="horizontal"
            android:paddingTop="10dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enrollment"
                android:textColor="@color/devide_line" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:background="@color/devide_line" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_enrollment"
            android:layout_width="fill_parent"

            android:layout_height="70dp">

            <TextView
                android:id="@+id/tv_title1"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"

                android:text="@string/enroll_fingerprint"
                android:textColor="@color/dark_grey"
                android:textSize="20dip" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_help"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:orientation="vertical"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/iv_finger"
            android:orientation="vertical"
            android:paddingLeft="8dip">

            <TextView
                android:id="@+id/tv_title4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:textSize="20dip" />

            <TextView
                android:id="@+id/tv_content4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_title4"
                android:paddingBottom="8dip"
                android:paddingTop="2dip"
                android:text="@string/help_to_enroll" />
        </RelativeLayout>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/ll_remove_fingerprint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:orientation="horizontal"
            android:paddingTop="8dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finger_list"
                android:textColor="@color/devide_line" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:background="@color/devide_line" />
        </LinearLayout>
        <TextView
            android:id="@+id/finger_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="20dip"
            android:paddingLeft="8dip"
            android:paddingTop="20dip"
            android:text="@string/no_finger_print"
            android:visibility="gone"
            android:textColor="@color/dark_grey"/>

        <ListView
            android:id="@+id/listview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:divider="@color/dark_grey"></ListView>
    </LinearLayout>

    <!--
         <ListView
        android:id="@+id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:cacheColorHint="@android:color/transparent" />
    -->


    <!--
         <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="?android:attr/listDivider" />
    -->

    <View
        android:id="@+id/spacer_bottom"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_marginTop="6dip"
        android:layout_weight="1" />

</LinearLayout>